- delete Asana js files

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -10,23 +10,22 @@
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="../js/popup.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <div class="features-boxed" style="height:656px;">
+    <div class="features-boxed" style="width:400px;">
         <div class="container">
-            <div class="row justify-content-center features" style="height:656px;">
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box" style="height:382px;"><i class="fa fa-clock-o icon"></i>
-                        <h3 class="name">Asana Timer</h3>
-                        <p class="description">Asana Timer requires your permission to access your Asana account. Click the button below to grant access.</p><button id="asana_grant_permission" class="btn btn-primary btn-block" type="submit" style="background-color:rgb(22,218,41);height:51px;font-size:24px;">Grant Access</button></div>
+            <div class="row justify-content-center features">
+                <div id="lead_container" class="col-sm-6 col-md-5 col-lg-4">
+                    <img src="../images/no_leads.png"/>
+                    <p class="description">You have no leads.<br>Please enjoy your day!</p>
                 </div>
             </div>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../js/popup.js" type="text/javascript"></script>
 </body>
 
 </html>
