add click events to leads

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -16,16 +16,15 @@
     <div class="features-boxed" style="width:400px;">
         <div class="container">
             <div class="row justify-content-center features">
+                    <div id="no_leads" class="d-none">
+                        <img src="../images/no_leads.png"/>
+                        <p class="description">You have no leads.<br>Please enjoy your day!</p>
+                    </div>
                 <div id="lead_container" class="col-sm-6 col-md-5 col-lg-4">
-                    <img src="../images/no_leads.png"/>
-                    <p class="description">You have no leads.<br>Please enjoy your day!</p>
                 </div>
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../js/popup.js" type="text/javascript"></script>
 </body>
-
+<script src="../js/popup.js" type="text/javascript"></script>
 </html>
