link leads to Accept/Reject page

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -16,12 +16,12 @@
     <div class="features-boxed" style="width:400px;">
         <div class="container">
             <div class="row justify-content-center features">
-                    <div id="no_leads" class="d-none">
-                        <img src="../images/no_leads.png"/>
-                        <p class="description">You have no leads.<br>Please enjoy your day!</p>
-                    </div>
-                <div id="lead_container" class="col-sm-6 col-md-5 col-lg-4">
-                </div>
+                <section id="no_leads" class="d-none">
+                    <img src="../images/no_leads.png"/>
+                    <p class="description">You have no leads.<br>Please enjoy your day!</p>
+                </section>
+                <section id="lead_container" class="col-sm-6 col-md-5 col-lg-4"></section>
+                <section id="details" class="container"></section>
             </div>
         </div>
     </div>
